--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typed.js": "^2.0.132",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
