--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/cli": "^7.0.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
+    "swiper": "^9.1.1",
     "tslib": "^2.3.0",
     "typed.js": "^2.0.132",
     "zone.js": "~0.11.4"
